@@ -2,7 +2,6 @@ package it.pagopa.atmlayer.wf.process.enums;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import jakarta.enterprise.context.ApplicationScoped;
 import lombok.AllArgsConstructor;
@@ -34,6 +33,6 @@ public enum TaskVarsEnum {
     public static List<String> getValues() {
         return Arrays.stream(TaskVarsEnum.values())
                 .map(TaskVarsEnum::getValue)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
